@@ -1,4 +1,9 @@
-$Id: ChangeLog 4278 2016-04-08 18:42:55Z chrfranke $
+$Id: ChangeLog 4279 2016-04-09 09:50:30Z chrfranke $
+
+2016-04-09  Christian Franke  <franke@computer.org>
+
+	nvmecmds.cpp, os_win32.cpp: Use NSID=0 for Identify Controller
+	command.  This fixes NVMe access via Samsung driver on Windows.
 
 2016-04-08  Christian Franke  <franke@computer.org>
 
